fixed button alignment and colors of forum page

--- a/191A_App/src/app/CheckIn/CheckIn.page.scss
+++ b/191A_App/src/app/CheckIn/CheckIn.page.scss
@@ -1,5 +1,4 @@
 .checkin-size{
-    background: white !important;
     padding-top: 30%;
     text-align: center;
     display: flex; /* Add this line to make it a flex container */
